--- a/Labyrinthian/Labyrinthian.csproj
+++ b/Labyrinthian/Labyrinthian.csproj
@@ -59,8 +59,6 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AnimatedSprite.cs" />
-    <Compile Include="Camera.cs" />
     <Compile Include="Components\AnimatedSpriteComponent.cs" />
     <Compile Include="Components\CameraComponent.cs" />
     <Compile Include="Components\LightSourceComponent.cs" />
@@ -68,37 +66,28 @@
     <Compile Include="Components\PlayerInputComponent.cs" />
     <Compile Include="Components\PlayerSpriteComponent.cs" />
     <Compile Include="Components\PositionComponent.cs" />
+    <Compile Include="Components\SpriteComponent.cs" />
     <Compile Include="Components\TorchSpriteComponent.cs" />
     <Compile Include="Components\TransformComponent.cs" />
     <Compile Include="Config\Config.cs" />
-    <Compile Include="IHitbox.cs" />
-    <Compile Include="Level.cs" />
-    <Compile Include="Lighting\LightSource.cs" />
     <Compile Include="Maze\Maze.cs" />
     <Compile Include="Maze\MazeGenerator.cs" />
     <Compile Include="Maze\MazeLayer.cs" />
-    <Compile Include="PhysicsSystem.cs" />
     <Compile Include="Prefabs\PlayerFactory.cs" />
+    <Compile Include="Prefabs\TileFactory.cs" />
     <Compile Include="Prefabs\TorchFactory.cs" />
-    <Compile Include="Screen.cs" />
+    <Compile Include="Screens\Screen.cs" />
+    <Compile Include="Components\SpriteAnimator.cs" />
     <Compile Include="Systems\DrawableGameSystem.cs" />
     <Compile Include="Systems\LightingGameSystem.cs" />
+    <Compile Include="Systems\PhysicsGameSystem.cs" />
     <Compile Include="Systems\RenderGameSystem.cs" />
     <Compile Include="Systems\UpdateGameSystem.cs" />
-    <Compile Include="Tiles\GroundTile.cs" />
-    <Compile Include="IPosition.cs" />
     <Compile Include="LabyrinthianGame.cs" />
-    <Compile Include="Lighting\LightingSystem.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ProgrammerArt.cs" />
+    <Compile Include="Config\ProgrammerArt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tiles\MazeGenerator.cs" />
-    <Compile Include="Tiles\PointEventArgs.cs" />
-    <Compile Include="Tiles\Tile.cs" />
-    <Compile Include="Tiles\TileSystem.cs" />
-    <Compile Include="Tiles\WallTile.cs" />
-    <Compile Include="Torch.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
