moved some basic components to MonoTools, Changed Transform to Vector2, working on Collision Detection with multiple boxes at the same time

--- a/Labyrinthian/Labyrinthian.csproj
+++ b/Labyrinthian/Labyrinthian.csproj
@@ -64,13 +64,10 @@
     <Compile Include="Components\LevelCompleteEventComponent.cs" />
     <Compile Include="Components\LevelCompleterComponent.cs" />
     <Compile Include="Components\LightSourceComponent.cs" />
-    <Compile Include="Components\PhysicsHitboxComponent.cs" />
     <Compile Include="Components\PlayerInputComponent.cs" />
     <Compile Include="Components\PlayerSpriteComponent.cs" />
     <Compile Include="Components\SpriteComponent.cs" />
-    <Compile Include="Components\TilePositionComponent.cs" />
     <Compile Include="Components\TorchSpriteComponent.cs" />
-    <Compile Include="Components\TransformComponent.cs" />
     <Compile Include="Config\Config.cs" />
     <Compile Include="Maze\Maze.cs" />
     <Compile Include="Maze\MazeGenerator.cs" />
@@ -78,12 +75,13 @@
     <Compile Include="Prefabs\PlayerFactory.cs" />
     <Compile Include="Prefabs\TileFactory.cs" />
     <Compile Include="Prefabs\TorchFactory.cs" />
-    <Compile Include="Screens\Screen.cs" />
     <Compile Include="Components\SpriteAnimator.cs" />
+    <Compile Include="Screens\Scene.cs" />
     <Compile Include="Systems\DrawableGameSystem.cs" />
     <Compile Include="Systems\LevelGameSystem.cs" />
     <Compile Include="Systems\LightingGameSystem.cs" />
     <Compile Include="Systems\PhysicsGameSystem.cs" />
+    <Compile Include="Systems\PositionTransformGameSystem.cs" />
     <Compile Include="Systems\RenderGameSystem.cs" />
     <Compile Include="Systems\TileGameSystem.cs" />
     <Compile Include="Systems\UpdateGameSystem.cs" />
